<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout_MainMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinearLayout_Bottom" >
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/background"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_menu"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@drawable/btn_color" >
        </TextView>

        <TextView
            android:id="@+id/tvAttlog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_attlog"
            android:gravity="center"
            android:text="@string/attlog"
            android:textColor="@drawable/btn_color" >
        </TextView>

        <TextView
            android:id="@+id/tvNote"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_note"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@drawable/btn_color" >
        </TextView>

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_more"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@drawable/btn_color" >
        </TextView>
    </LinearLayout>

</RelativeLayout>