<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.colorfuldays.MenuFragment" >

    <RelativeLayout
        android:id="@+id/RelativeLayout_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background" >

        <TextView
            android:id="@+id/tvTitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/menu"
            android:textColor="@drawable/textColor_white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="45dp"
            android:background="@drawable/lineColor" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@drawable/background"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_checkin_normal"
            android:gravity="center"
            android:text="@string/check_in"
            android:textColor="@drawable/textColor_white" />

        <TextView
            android:id="@+id/tvCheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_checkout_normal"
            android:gravity="center"
            android:text="@string/check_out"
            android:textColor="@drawable/textColor_white" />
    </LinearLayout>

    <GridView
        android:id="@+id/gvMainMenu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp" >
    </GridView>

</LinearLayout>